--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
+body{
+    padding:0;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    display: flex;
+    background-color: wheat;
+
+   
+}
+h1{
+    background-color: orange;
+    font-size:2.5rem;
+    margin-left:1rem;
+    text-align: center;
+    padding:0.5rem;
+    
+
+}
+.App{
+    text-decoration: none;
+    padding:1rem;
+    height:auto;
+    width:100%;
+    min-height: 500px;
+    max-width:500px;
+    min-width:250px;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 20px;
+}
+.form input{
+    text-decoration: none;
+    width:70%;
+    border-bottom-right-radius: 15% 3%;
+    border-bottom-left-radius: 3%,15%;
+    background-color: transparent;
+    border:solid 3px transparent;
+    border-bottom:dashed 3px #fdcb6e;
+    padding:0.7rem;
+    font-size: 1rem;
+    margin-bottom: 20px;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button{
+    text-decoration: none;
+    padding:3%;
+    font-size: 20px;
+    padding-bottom: 3px;
+    border-radius:5px ;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li{
+    text-align: left;
+    position: relative;
+    padding:0.5rem;
+    font-size: 18px;
 }
